Fix dialog box styling on firefox.

--- a/browser/custom_components/pages/page-home/page-home.scss
+++ b/browser/custom_components/pages/page-home/page-home.scss
@@ -15,8 +15,8 @@ paper-fab-speed-dial {
 paper-dialog.search-dialog-pos {
     position: fixed;
     top: 16px;
+    left: 16px;
     right: 16px;
-    width: 100%;
     height: 100px;
     overflow: auto;
 }
